# website

./: .env.template  .gitignore  manage.py  pyproject.toml
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_post_slug.py
core/static/css/: app.css
core/templates/: about.html  base.html  index.html  post_detail.html  post_list.html
personal_django/: asgi.py  settings.py  urls.py  wsgi.py
